added liquibase and connection to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+server.port=8090
+debug=true
 
 spring.mvc.view.prefix= /
 spring.mvc.view.suffix= .jsp
 spring.messages.basename=validation
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:postgresql://localhost:5432/auth
+spring.datasource.username=auth
+spring.datasource.password=auth
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
