--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.username=auth
 spring.datasource.password=auth
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+google.recaptcha.secret=6LdHFL0UAAAAAG6_jAci9x7gJFX3Jg6uLyO3v2yK
