added dependencies for OAuth2 with Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.password=auth
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 google.recaptcha.secret=6LdHFL0UAAAAAG6_jAci9x7gJFX3Jg6uLyO3v2yK
+
+spring.security.oauth2.client.registration.google.client-id=<your client id>
+spring.security.oauth2.client.registration.google.client-secret=<your client secret>
